--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderMultiCell.xib
@@ -43,7 +43,7 @@
                             <constraint firstAttribute="height" constant="1" id="x1k-LS-mUT" customClass="NSLayoutConstraintOnePixelLine"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="default">
                             <mask key="constraints">
