--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditIntroduceVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditIntroduceVC.xib
@@ -64,7 +64,7 @@
                                         <constraint firstAttribute="height" constant="1" id="gJ6-x3-Tax" customClass="NSLayoutConstraintOnePixelLine"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/255" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umG-ej-HTA">
