--- a/AutoMall/ViewControllers/PersonalCenter/MailCollectionCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailCollectionCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="7ON-ZD-PpV">
@@ -35,12 +35,21 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zx-D7-cN1">
-                        <rect key="frame" x="104" y="45" width="37" height="21"/>
+                        <rect key="frame" x="104" y="45" width="45.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="cjs-2J-ziO"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="JeE-ah-ZJR" customClass="StrikeThroughLabel">
+                        <rect key="frame" x="157.5" y="47" width="22.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Rir-qI-P7z"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -49,17 +58,20 @@
                     <constraint firstItem="7ON-ZD-PpV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="EUm-eP-jSx"/>
                     <constraint firstItem="7ON-ZD-PpV" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Fxx-DP-AQg"/>
                     <constraint firstAttribute="trailing" secondItem="Sbc-7a-aGa" secondAttribute="trailing" constant="16" id="NFr-3c-NVv"/>
+                    <constraint firstItem="JeE-ah-ZJR" firstAttribute="centerY" secondItem="7zx-D7-cN1" secondAttribute="centerY" constant="2" id="NYb-Cn-2iG"/>
                     <constraint firstItem="Sbc-7a-aGa" firstAttribute="leading" secondItem="7ON-ZD-PpV" secondAttribute="trailing" constant="8" id="cK0-oK-dJU"/>
                     <constraint firstItem="7zx-D7-cN1" firstAttribute="leading" secondItem="7ON-ZD-PpV" secondAttribute="trailing" constant="8" id="g54-RJ-F2x"/>
                     <constraint firstItem="Sbc-7a-aGa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="v5F-GS-Dj4"/>
+                    <constraint firstItem="JeE-ah-ZJR" firstAttribute="leading" secondItem="7zx-D7-cN1" secondAttribute="trailing" constant="8" id="wEF-03-1HF"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="costPriceStrikeL" destination="JeE-ah-ZJR" id="U6J-UQ-hnV"/>
                 <outlet property="goodsIMG" destination="7ON-ZD-PpV" id="GRk-TM-BrH"/>
                 <outlet property="goodsName" destination="Sbc-7a-aGa" id="RnX-4q-Wqt"/>
                 <outlet property="goodsprice" destination="7zx-D7-cN1" id="lLp-nn-txq"/>
             </connections>
-            <point key="canvasLocation" x="-391" y="-26.5"/>
+            <point key="canvasLocation" x="-754" y="-19"/>
         </tableViewCell>
     </objects>
     <resources>
