--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeAuthVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeAuthVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVE-l9-JkU">
-                    <rect key="frame" x="0.0" y="64" width="375" height="290"/>
+                    <rect key="frame" x="0.0" y="64" width="375" height="306"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JaD-qZ-pMX">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -37,26 +37,26 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kf0-a0-1G2">
-                            <rect key="frame" x="16" y="8" width="62" height="18"/>
+                            <rect key="frame" x="16" y="13" width="62" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 认证介绍多行 " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNB-V5-pmV">
-                            <rect key="frame" x="16" y="46" width="343" height="54"/>
+                            <rect key="frame" x="16" y="58" width="343" height="54"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="Reu-0c-JDw">
-                            <rect key="frame" x="112" y="120" width="150" height="150"/>
+                            <rect key="frame" x="112" y="136" width="150" height="150"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="KZn-qb-ygX"/>
                                 <constraint firstAttribute="height" constant="150" id="gtT-VP-tg9"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbT-nk-Pgc">
-                            <rect key="frame" x="16" y="36" width="359" height="1"/>
+                            <rect key="frame" x="16" y="44" width="359" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="abV-kE-RWX" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -66,7 +66,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHq-YH-geM">
-                            <rect key="frame" x="16" y="110" width="359" height="1"/>
+                            <rect key="frame" x="16" y="125" width="359" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="A9V-jJ-y4u" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -76,7 +76,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCG-p5-5yy">
-                            <rect key="frame" x="0.0" y="289" width="375" height="1"/>
+                            <rect key="frame" x="0.0" y="305" width="375" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="448-KB-NmO" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -89,24 +89,24 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="JaD-qZ-pMX" firstAttribute="top" secondItem="dVE-l9-JkU" secondAttribute="top" id="5P0-WC-SAj"/>
+                        <constraint firstItem="Reu-0c-JDw" firstAttribute="top" secondItem="dHq-YH-geM" secondAttribute="bottom" constant="10" id="7VK-Td-eAa"/>
+                        <constraint firstItem="aNB-V5-pmV" firstAttribute="top" secondItem="KbT-nk-Pgc" secondAttribute="bottom" constant="13" id="8yK-qi-zRT"/>
                         <constraint firstAttribute="trailing" secondItem="dHq-YH-geM" secondAttribute="trailing" id="ACR-PU-NMI"/>
-                        <constraint firstItem="dHq-YH-geM" firstAttribute="top" secondItem="aNB-V5-pmV" secondAttribute="bottom" constant="10" id="F21-cE-HTy"/>
                         <constraint firstAttribute="trailing" secondItem="KbT-nk-Pgc" secondAttribute="trailing" id="HvJ-Mf-jna"/>
                         <constraint firstItem="dHq-YH-geM" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" constant="16" id="IvV-Yi-6cP"/>
-                        <constraint firstItem="Reu-0c-JDw" firstAttribute="top" secondItem="aNB-V5-pmV" secondAttribute="bottom" constant="20" id="LD8-sg-DKN"/>
                         <constraint firstAttribute="trailing" secondItem="JaD-qZ-pMX" secondAttribute="trailing" id="MTh-RO-te9"/>
                         <constraint firstAttribute="trailing" secondItem="rCG-p5-5yy" secondAttribute="trailing" id="Nkg-vE-Un1"/>
                         <constraint firstItem="JaD-qZ-pMX" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" id="Onn-WN-V5o"/>
                         <constraint firstItem="kf0-a0-1G2" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" constant="16" id="TPo-QF-IuA"/>
+                        <constraint firstItem="dHq-YH-geM" firstAttribute="top" secondItem="aNB-V5-pmV" secondAttribute="bottom" constant="13" id="Uiv-H7-sbn"/>
                         <constraint firstAttribute="bottom" secondItem="Reu-0c-JDw" secondAttribute="bottom" constant="20" id="deF-pv-mwp"/>
                         <constraint firstItem="aNB-V5-pmV" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" constant="16" id="gsr-hp-WQU"/>
                         <constraint firstItem="KbT-nk-Pgc" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" constant="16" id="hZe-94-Gkj"/>
                         <constraint firstItem="Reu-0c-JDw" firstAttribute="centerX" secondItem="dVE-l9-JkU" secondAttribute="centerX" id="ldq-xh-gSz"/>
                         <constraint firstItem="rCG-p5-5yy" firstAttribute="leading" secondItem="dVE-l9-JkU" secondAttribute="leading" id="mWj-b8-9GM"/>
                         <constraint firstAttribute="bottom" secondItem="rCG-p5-5yy" secondAttribute="bottom" id="npc-Ff-xkj"/>
-                        <constraint firstItem="kf0-a0-1G2" firstAttribute="top" secondItem="dVE-l9-JkU" secondAttribute="top" constant="8" id="o1P-ha-4vq"/>
-                        <constraint firstItem="KbT-nk-Pgc" firstAttribute="top" secondItem="kf0-a0-1G2" secondAttribute="bottom" constant="10" id="pvf-aB-IhO"/>
-                        <constraint firstItem="aNB-V5-pmV" firstAttribute="top" secondItem="kf0-a0-1G2" secondAttribute="bottom" constant="20" id="sTh-7f-i0V"/>
+                        <constraint firstItem="kf0-a0-1G2" firstAttribute="top" secondItem="dVE-l9-JkU" secondAttribute="top" constant="13" id="o1P-ha-4vq"/>
+                        <constraint firstItem="KbT-nk-Pgc" firstAttribute="top" secondItem="kf0-a0-1G2" secondAttribute="bottom" constant="13" id="pvf-aB-IhO"/>
                         <constraint firstAttribute="trailing" secondItem="aNB-V5-pmV" secondAttribute="trailing" constant="16" id="wLs-IJ-1lD"/>
                     </constraints>
                 </view>
