--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeDetailTopCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeDetailTopCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,21 +15,21 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yPU-yf-9Eg">
-                        <rect key="frame" x="16" y="8" width="296" height="133.5"/>
+                        <rect key="frame" x="16" y="13" width="288" height="123.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="yPU-yf-9Eg" secondAttribute="bottom" constant="8" id="DbE-5f-KjV"/>
-                    <constraint firstAttribute="trailing" secondItem="yPU-yf-9Eg" secondAttribute="trailing" constant="8" id="KJt-WY-mQr"/>
+                    <constraint firstAttribute="bottom" secondItem="yPU-yf-9Eg" secondAttribute="bottom" constant="13" id="DbE-5f-KjV"/>
+                    <constraint firstAttribute="trailing" secondItem="yPU-yf-9Eg" secondAttribute="trailing" constant="16" id="KJt-WY-mQr"/>
                     <constraint firstItem="yPU-yf-9Eg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hPO-5r-Iyy"/>
-                    <constraint firstItem="yPU-yf-9Eg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="iWj-MN-y6s"/>
+                    <constraint firstItem="yPU-yf-9Eg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="iWj-MN-y6s"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
