--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,7 +27,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4cE-3n-sOg">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="260"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="270"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ubr-ZL-UPX">
                                     <rect key="frame" x="16" y="12" width="70" height="21"/>
@@ -94,11 +94,11 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="uploadImgWT" translatesAutoresizingMaskIntoConstraints="NO" id="woS-Rp-xld" customClass="WPImageView">
-                                    <rect key="frame" x="54" y="99.5" width="267" height="150"/>
+                                    <rect key="frame" x="45.5" y="99.5" width="284" height="160"/>
                                     <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="woS-Rp-xld" secondAttribute="height" multiplier="16:9" id="ARo-DY-nB1"/>
-                                        <constraint firstAttribute="height" constant="150" id="clL-DR-IHd"/>
+                                        <constraint firstAttribute="height" constant="160" id="clL-DR-IHd"/>
                                     </constraints>
                                 </imageView>
                             </subviews>
@@ -110,7 +110,7 @@
                                 <constraint firstAttribute="trailing" secondItem="cvm-Ou-jQg" secondAttribute="trailing" constant="16" id="5ad-3H-5hV"/>
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="leading" secondItem="Hpq-9B-IT9" secondAttribute="trailing" constant="8" id="9v2-d8-Uzi"/>
                                 <constraint firstAttribute="trailing" secondItem="rYU-l2-pHd" secondAttribute="trailing" constant="16" id="I0Q-Vh-MzQ"/>
-                                <constraint firstAttribute="height" constant="260" id="MSM-2E-g8i"/>
+                                <constraint firstAttribute="height" constant="270" id="MSM-2E-g8i"/>
                                 <constraint firstItem="ubr-ZL-UPX" firstAttribute="leading" secondItem="4cE-3n-sOg" secondAttribute="leading" constant="16" id="P2z-NB-KOk"/>
                                 <constraint firstAttribute="trailing" secondItem="jBH-NF-gsl" secondAttribute="trailing" id="UYh-gb-y73"/>
                                 <constraint firstItem="ubr-ZL-UPX" firstAttribute="top" secondItem="4cE-3n-sOg" secondAttribute="top" constant="12" id="ciJ-EZ-gpZ"/>
