--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="Sep-Na-f1p">
@@ -35,21 +35,33 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称内容" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHR-33-P6j">
-                        <rect key="frame" x="86" y="39" width="226" height="40.5"/>
+                        <rect key="frame" x="86" y="39" width="148" height="40.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwL-6f-tLX">
+                        <rect key="frame" x="244" y="32" width="60" height="25"/>
+                        <color key="backgroundColor" red="0.91764705879999997" green="0.0" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="TvD-eO-jBR"/>
+                            <constraint firstAttribute="width" constant="60" id="zfX-Qz-3xt"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <state key="normal" title="等待审核"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="mHR-33-P6j" firstAttribute="top" secondItem="7EM-oO-s1i" secondAttribute="bottom" constant="8" id="4pM-kL-OJd"/>
                     <constraint firstAttribute="bottom" secondItem="mHR-33-P6j" secondAttribute="bottom" constant="10" id="KHD-Sh-MrV"/>
                     <constraint firstItem="Sep-Na-f1p" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KzG-zu-ZLx"/>
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="Q1h-Lh-fdb"/>
+                    <constraint firstItem="RwL-6f-tLX" firstAttribute="leading" secondItem="mHR-33-P6j" secondAttribute="trailing" constant="10" id="Qh0-Ge-GFc"/>
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ZWM-Ec-zJR"/>
                     <constraint firstItem="mHR-33-P6j" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="aym-T9-0VI"/>
+                    <constraint firstAttribute="trailing" secondItem="RwL-6f-tLX" secondAttribute="trailing" constant="16" id="dYl-Ia-u6v"/>
                     <constraint firstItem="Sep-Na-f1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="g3J-YL-UGt"/>
-                    <constraint firstAttribute="trailing" secondItem="mHR-33-P6j" secondAttribute="trailing" constant="8" id="pal-c9-Ya4"/>
+                    <constraint firstItem="RwL-6f-tLX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uWr-vJ-Amc"/>
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="wS9-fj-qeQ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -57,8 +69,9 @@
                 <outlet property="imgView" destination="Sep-Na-f1p" id="VDW-SV-E5v"/>
                 <outlet property="introduceL" destination="mHR-33-P6j" id="kyd-v6-mxB"/>
                 <outlet property="nameL" destination="7EM-oO-s1i" id="p45-GC-tyc"/>
+                <outlet property="statusBtn" destination="RwL-6f-tLX" id="k8h-RE-NUK"/>
             </connections>
-            <point key="canvasLocation" x="-145" y="6"/>
+            <point key="canvasLocation" x="-445" y="0.0"/>
         </tableViewCell>
     </objects>
     <resources>
