--- a/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="4EI-uQ-Kdu" customClass="WPImageView">
+                    <imageView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="center_profile" translatesAutoresizingMaskIntoConstraints="NO" id="4EI-uQ-Kdu" customClass="WPImageView">
                         <rect key="frame" x="8" y="10" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="STg-4W-IJp"/>
@@ -122,6 +122,6 @@
     <resources>
         <image name="arrows" width="13" height="24"/>
         <image name="bronzeBadge" width="120" height="120"/>
-        <image name="placeholderPictureSquare" width="302" height="302"/>
+        <image name="center_profile" width="200" height="200"/>
     </resources>
 </document>
